--- a/Android Client/Clup/app/src/main/res/values/strings.xml
+++ b/Android Client/Clup/app/src/main/res/values/strings.xml
@@ -3,7 +3,16 @@
     <string name="title_verify_number">Verify your number</string>
     <string name="text_verify_number">Enter your mobile number to receive a verification code</string>
     <string name="action_continue">Continue</string>
-    <string name="text_verify_code">Enter the verification code sent to %1$s</string>
+    <string name="text_verify_code">Enter the verification code sent to +%1$s</string>
     <string name="action_verify">Verify</string>
     <string name="text_prefix">+</string>
+    <string name="title_welcome">Welcom to Clup!</string>
+    <string name="text_choose_name">Insert your full name, it will be visible to other Clup users</string>
+    <string name="action_next">Next</string>
+    <string name="title_insert_number">Input your number</string>
+    <string name="action_retry">Retry</string>
+    <string name="error_name">This field is required</string>
+    <string name="phone_error">Invalid phone number</string>
+    <string name="code_error">Invalid or expired code</string>
+    <string name="action_retry_in">Retry in\u0020</string>
 </resources>
