--- a/Android Client/Clup/app/src/main/res/values/strings.xml
+++ b/Android Client/Clup/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="error_fullname">Your full name is required</string>
     <string name="text_connection_error_alert_message">Check your internet connection and try again</string>
     <string name="title_connection_error_alert_message">You are offline</string>
+    <string name="action_done">Done</string>
 </resources>
