--- a/Android Client/Clup/app/src/main/res/values/strings.xml
+++ b/Android Client/Clup/app/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
     <string name="title_insert_number">Input your number</string>
     <string name="title_theme_alert">Choose theme</string>
     <string name="title_activity_map">Map</string>
+    <string name="title_notify_alert">Notify me</string>
 
     <string name="text_verify_number">Enter your mobile number to receive a verification code</string>
     <string name="text_verify_code">Enter the verification code sent to +%1$s</string>
     <string name="text_prefix">+</string>
     <string name="text_choose_name">Insert your full name, it will be visible to other Clup users.</string>
     <string name="text_unknown_location">Unknown location.</string>
+    <string name="text_notification_set">Notification has been set</string>
+    <string name="text_notification_cancelled">Notification cancelled</string>
 
     <string name="action_verify">Verify</string>
     <string name="action_next">Next</string>
@@ -21,6 +24,10 @@
     <string name="action_book">Book</string>
     <string name="action_ok">OK</string>
     <string name="action_done">Done</string>
+    <string name="action_notify_me">Notify me</string>
+    <string name="action_notification_on">Notification on</string>
+    <string name="action_notification_off">Notification off</string>
+    <string name="action_directions">Directions</string>
 
     <string name="error_name">This field is required</string>
     <string name="error_phone">Invalid phone number</string>
@@ -32,8 +39,28 @@
     <string name="text_connection_error_alert_message">Check your internet connection and try again</string>
     <string name="title_connection_error_alert_message">You are offline</string>
     <string name="reservation_error_text">An error occurred, retry.</string>
+    <string name="text_maps_error_alert_dialog">This feature is not available on your device.</string>
+    <string name="text_error_shops_snack_bar">Unable to load shops, retry in a while</string>
 
     <string name="array_item_light">Light</string>
     <string name="array_item_dark">Dark</string>
     <string name="array_item_system_default">System default</string>
+
+    <string name="info_title_text">Hi I\'m a QR code!</string>
+    <string name="info_subtitle_text">Scan me before entering the store,\ndon\'t forget to wear your mask!</string>
+
+    <string name="channel_name">Reservations</string>
+    <string name="channel_description">Remind you in advance that your turn is close.</string>
+    <string name="notification_title">%1$s reservation</string> <!-- eg. LocalSop reservation -->
+    <string name="notification_content">Don\'t forget your appointment in %1$s</string> <!-- eg. Don't forget your appointment in 30 minutes -->
+
+    <string name="time_fifteen_minutes">15 minutes</string>
+    <string name="time_thirty_minutes">30 minutes</string>
+    <string name="time_one_hour">1 hour</string>
+    <string name="time_two_hours">2 hours</string>
+
+    <string name="array_item_fifteen_minutes_before">15 minutes before</string>
+    <string name="array_item_thirty_minutes_before">30 minutes before</string>
+    <string name="array_item_one_hour_before">1 hour before</string>
+    <string name="array_item_two_hours_before">2 hours before</string>
 </resources>
