--- a/Android Client/Clup/app/src/main/res/values/strings.xml
+++ b/Android Client/Clup/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="text_notification_summary">%1$s before</string> <!-- eg. 30 minutes before --> <!-- copy paste %1$s and leave a space between it and "before" -->
     <string name="text_empty_view">You have no reservations.\nBook one!</string> <!-- copy-paste the \n and DON'T leave a space between \n and the previous-next words -->
     <string name="text_expired">Expired</string>
+    <string name="text_you">You</string>
+    <string name="text_time">Time</string>
+    <string name="text_queue">Queue</string>
 
     <string name="action_verify">Verify</string>
     <string name="action_next">Next</string>
