RU translation added

--- a/Android Client/Clup/app/src/main/res/values-ru-rRU/strings.xml
+++ b/Android Client/Clup/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,82 +2,82 @@
 <resources>
     <string name="app_name">Clup</string>
 
-    <string name="title_verify_number">Verify your number</string>
-    <string name="title_welcome">Welcome to Clup!</string>
-    <string name="title_insert_number">Input your number</string>
+    <string name="title_verify_number">Подтвердите свой номер</string>
+    <string name="title_welcome">Добро пожаловать в Clup!</string>
+    <string name="title_insert_number">Введите свой номер</string>
     <string name="title_theme_alert">Choose theme</string>
-    <string name="title_activity_map">Map</string>
-    <string name="title_notify_alert">Notify me</string>
-    <string name="title_error_connection_alert">You are offline</string>
+    <string name="title_activity_map">Карта</string>
+    <string name="title_notify_alert">Уведомить меня</string>
+    <string name="title_error_connection_alert">Вы находитесь в автономном режиме</string>
 
-    <string name="text_verify_number">Enter your mobile number to receive a verification code</string>
-    <string name="text_verify_code">Enter the verification code sent to +%1$s</string> <!-- copy-paste +%1$s and leave a space between "to" and +%1$s -->
-    <string name="text_choose_name">Insert your full name, it will be visible to other Clup users.</string>
-    <string name="text_unknown_location">Unknown location.</string>
-    <string name="text_notification_set">Notification enabled</string>
-    <string name="text_notification_cancelled">Notification disabled</string>
-    <string name="text_friendly_message">Hi, %1$s</string> <!-- eg. Hi, Mark --> <!-- copy-paste %1$s and leave a space between the comma and %1$s -->
-    <string name="text_reservation_summary">%1$s at %2$s</string> <!-- eg. Wednesday, 21 june at 12:30 --> <!-- copy paste %1$s and %2$s, translate "at" and leave the two spaces before and after "at"-->
-    <string name="text_notification_summary">%1$s before</string> <!-- eg. 30 minutes before --> <!-- copy paste %1$s and leave a space between it and "before" -->
-    <string name="text_empty_view">You have no reservations.\nBook one!</string> <!-- copy-paste the \n and DON'T leave a space between \n and the previous-next words -->
-    <string name="text_expired">Expired</string>
-    <string name="text_you">You</string>
-    <string name="text_time">Time</string>
-    <string name="text_queue">Queue</string>
+    <string name="text_verify_number">Введите свой номер мобильного телефона, чтобы получить проверочный код</string>
+    <string name="text_verify_code">Введите проверочный код, отправленный на +%1$s</string>
+    <string name="text_choose_name">Вставьте свое полное имя, оно будет видно другим пользователям Clup</string>
+    <string name="text_unknown_location">Неизвестное местоположение</string>
+    <string name="text_notification_set">Уведомление включено</string>
+    <string name="text_notification_cancelled">Уведомление отключено</string>
+    <string name="text_friendly_message">Здравствуй, %1$s</string> <!-- eg. Здравствуй, Марк -->
+    <string name="text_reservation_summary">%1$s в %2$s</string> <!-- eg. Среда, 21 июня в 12:30 -->
+    <string name="text_notification_summary">До начала осталось %1$s</string> <!-- eg. До начала осталось 30 минут -->
+    <string name="text_empty_view">Бронирований не обнаружено.\nУспейте забронировать!</string>
+    <string name="text_expired">Просрочено</string>
+    <string name="text_you">Вы</string>
+    <string name="text_time">Время</string>
+    <string name="text_queue">Очередь</string>
 
-    <string name="action_verify">Verify</string>
-    <string name="action_next">Next</string>
-    <string name="action_retry">Retry</string>
-    <string name="action_retry_in">Retry in\u0020</string> <!-- copy-paste the \u0020 and DON'T leave a space between "in" and \u0020 -->
-    <string name="action_select_theme">Theme</string>
-    <string name="action_book">Book</string>
-    <string name="action_ok">OK</string>
-    <string name="action_done">Done</string>
-    <string name="action_notify_me">Notify me</string>
-    <string name="action_notification_on">Notification on</string>
-    <string name="action_notification_off">Notification off</string>
-    <string name="action_directions">Directions</string>
-    <string name="action_invalidate">Invalidate</string>
+    <string name="action_verify">Подтвердить</string>
+    <string name="action_next">Вперед</string>
+    <string name="action_retry">Повторить попытку</string>
+    <string name="action_retry_in">Повторите попытку\u0020</string>
+    <string name="action_select_theme">Тема</string>
+    <string name="action_book">Забронировать</string>
+    <string name="action_ok">ОК</string>
+    <string name="action_done">Готово</string>
+    <string name="action_notify_me">Оповестить меня</string>
+    <string name="action_notification_on">Уведомление включено</string>
+    <string name="action_notification_off">Уведомление отключено</string>
+    <string name="action_directions">Направления</string>
+    <string name="action_invalidate">Аннулировать</string>
 
-    <string name="text_error_name">This field is required</string>
-    <string name="text_error_phone">Invalid phone number</string>
-    <string name="text_error_code">Invalid or expired code</string>
-    <string name="text_error_fullname">Your full name is required</string>
-    <string name="text_error_alert_location">To continue, enable your device location</string>
-    <string name="text_error_location">Unable to find your location, try again</string>
-    <string name="text_error_connection_alert">Check your internet connection and try again</string>
-    <string name="text_error_reservation">An error occurred, retry.</string>
-    <string name="text_error_alert_maps">This feature is not available on your device.</string>
-    <string name="text_error_snackbar_shop">Unable to load shops, retry in a while</string>
+    <string name="text_error_name">Это поле является обязательным</string>
+    <string name="text_error_phone">Неверный номер телефона</string>
+    <string name="text_error_code">Недопустимый или просроченный код</string>
+    <string name="text_error_fullname">Требуется Ваше полное имя</string>
+    <string name="text_error_alert_location">Чтобы продолжить, включите местоположение вашего устройства</string>
+    <string name="text_error_location">Не удалось найти ваше местоположение, повторите попытку</string>
+    <string name="text_error_connection_alert">Проверьте подключение к Интернету и повторите попытку</string>
+    <string name="text_error_reservation">Произошла ошибка, повторите попытку</string>
+    <string name="text_error_alert_maps">Эта функция недоступна на вашем устройстве</string>
+    <string name="text_error_snackbar_shop">Не удается загрузить магазины, повторите попытку через некоторое время</string>
 
-    <string name="text_warning_register">WARNING\nThis activity should not be here, it is here only for demonstration purposes.\n\nBy clicking on the below button you will mark the user as registered that is, the user has entered the shop meaning that the current reservation must be invalidated.</string>
-    <string name="title_warning_expire">This reservation is expired.</string>
-    <string name="text_warning_expire">It will still be visible for 1 hour from the reservation time.</string>
+    <string name="text_warning_register">WARNING\nТекущая activity не должна здесь находится, ее присутствие обусловлено демонстрационными целями.\n\nНажав на кнопку ниже, вы пометите пользователя как зарегистрированного, то есть, пользователь вошел в магазин, что означает, что текущее бронирование должно быть признано недействительным</string>
+    <string name="title_warning_expire">Срок действия этого бронирования истек</string>
+    <string name="text_warning_expire">Он по-прежнему будет виден в течение 1 часа с момента бронирования</string>
 
-    <string name="array_item_light">Light</string>
-    <string name="array_item_dark">Dark</string>
-    <string name="array_item_system_default">System default</string>
+    <string name="array_item_light">Светлая</string>
+    <string name="array_item_dark">Темная</string>
+    <string name="array_item_system_default">Система по умолчанию</string>
 
-    <string name="info_title_text">Hi I\'m a QR code!</string> <!-- if you use the apostrophe, remember to escape it by putting a "\" before it -->
-    <string name="info_subtitle_text">Scan me before entering the store,\ndon\'t forget to wear your mask!</string> <!-- copy-paste the \n and DON'T leave a space between \n and the previous-next words, also escape the apostrophe if you use it -->
+    <string name="info_title_text">Привет, я QR код!</string>
+    <string name="info_subtitle_text">Сканируй меня перед входом в магазин,\nне забудь надеть маску!</string>
 
-    <string name="notification_channel_name">Reservations</string>
-    <string name="notification_channel_description">Remind you in advance that your turn is close.</string>
-    <string name="notification_title">%1$s reservation</string> <!-- eg. LocalSop reservation --> <!-- copy-paste the %1$s and leave a space between it and the next word -->
-    <string name="notification_content">Don\'t forget your appointment in %1$s</string> <!-- eg. Don't forget your appointment in 30 minutes --> <!-- copy-paste the %1$s and leave a space between the previous word and "1$s", also escape the apostrophe if you use it -->
+    <string name="notification_channel_name">Бронирования</string>
+    <string name="notification_channel_description">Заранее напоминаю вам, что ваша очередь близка</string>
+    <string name="notification_title">%1$s бронирование</string>
+    <string name="notification_content">Не забудьте о своем визите через %1$s</string> <!-- eg. Не забудьте о своем визите через 30 мминут -->
 
-    <string name="time_fifteen_minutes">15 minutes</string>
-    <string name="time_thirty_minutes">30 minutes</string>
-    <string name="time_one_hour">1 hour</string>
-    <string name="time_two_hours">2 hours</string>
+    <string name="time_fifteen_minutes">15 минут</string>
+    <string name="time_thirty_minutes">30 минут</string>
+    <string name="time_one_hour">1 час</string>
+    <string name="time_two_hours">2 часа</string>
 
-    <string name="array_item_fifteen_minutes_before">15 minutes before</string>
-    <string name="array_item_thirty_minutes_before">30 minutes before</string>
-    <string name="array_item_one_hour_before">1 hour before</string>
-    <string name="array_item_two_hours_before">2 hours before</string>
+    <string name="array_item_fifteen_minutes_before">15 минут до</string>
+    <string name="array_item_thirty_minutes_before">30 минут до</string>
+    <string name="array_item_one_hour_before">1 час до</string>
+    <string name="array_item_two_hours_before">2 часа до</string>
 
-    <string name="accessibility_qr_code_image_view">QR code to show at the shop entrance</string>
-    <string name="accessibility_action_back">Back</string>
-    <string name="accessibility_action_location">Locate your current position on the map</string>
-    <string name="accessibility_success_image_view">Authentication successful</string>
+    <string name="accessibility_qr_code_image_view">QR код, который нужно показать при входе в магазин</string>
+    <string name="accessibility_action_back">Назад</string>
+    <string name="accessibility_action_location">Найдите свое текущее положение на карте</string>
+    <string name="accessibility_success_image_view">Аутентификация прошла успешно</string>
 </resources>
