--- a/Android Client/Clup/app/src/main/res/values-en-rGB/strings.xml
+++ b/Android Client/Clup/app/src/main/res/values-en-rGB/strings.xml
@@ -18,7 +18,6 @@
     <string name="text_notification_cancelled">Notification disabled</string>
     <string name="text_friendly_message">Hi, %1$s</string>
     <string name="text_reservation_summary">%1$s at %2$s</string>
-    <string name="text_notification_summary">%1$s before</string>
     <string name="text_empty_view">You have no reservations.\nBook one!</string>
     <string name="text_expired">Expired</string>
     <string name="text_you">You</string>
@@ -66,11 +65,13 @@
     <string name="notification_title">%1$s reservation</string>
     <string name="notification_content">Don\'t forget your appointment in %1$s</string>
 
+    <string name="time_now">0 minutes</string>
     <string name="time_fifteen_minutes">15 minutes</string>
     <string name="time_thirty_minutes">30 minutes</string>
     <string name="time_one_hour">1 hour</string>
     <string name="time_two_hours">2 hours</string>
 
+    <string name="array_item_now">Now [DEMO]</string>
     <string name="array_item_fifteen_minutes_before">15 minutes before</string>
     <string name="array_item_thirty_minutes_before">30 minutes before</string>
     <string name="array_item_one_hour_before">1 hour before</string>
